@@ -1,0 +1,35 @@
+define host {
+  host_name                      sw_example
+  address                        192.168.50.3
+  use                            tpl_host_basis_site,tpl_host_netzwerk_switch
+}
+
+define hostgroup {
+  name hg_netzwerk_switch
+}
+define hostgroup {
+  name hg_netzwerk
+}
+define hostgroup {
+  name hg_location_central
+}
+define hostgroup {
+  name hg_site_central
+}
+define host {
+  name                           tpl_host_netzwerk_switch
+  use                            tpl_host_netzwerk
+  hostgroups                     +hg_netzwerk_switch
+  register                       0
+}
+define host {
+  name                           tpl_host_netzwerk
+  hostgroups                     +hg_netzwerk
+  register                       0
+}
+
+define host {
+  name                           tpl_host_basis_site
+  hostgroups                     +hg_location_central,hg_site_central
+  register                       0
+}
